# TradingBot

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
data/: .gitkeep
docs/: architecture.md  features.md  installation.md
examples/: advanced_configuration.py  basic_usage.py
models/: .gitkeep
src/: __init__.py  config.py  data_processor.py  model_builder.py  unified_trading_bot.py  utils.py
tests/: __init__.py  conftest.py  test_data_processor.py
