[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-bot"
version = "1.0.0"
authors = [
    {name = "Visharath", email = "visharath@example.com"},
]
description = "A unified CNN-LSTM trading bot with advanced technical analysis"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["trading", "machine-learning", "cnn", "lstm", "finance", "algorithmic-trading"]
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.5.0",
    "scikit-learn>=1.1.0",
    "tensorflow>=2.8.0",
    "yfinance>=0.1.87",
    "ta>=0.10.2",
    "loguru>=0.6.0",
    "python-dotenv>=0.20.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "requests>=2.28.0",
    "tqdm>=4.64.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.1.0",
    "pytest-cov>=3.0.0",
    "black>=22.6.0",
    "isort>=5.10.0",
    "flake8>=5.0.0",
    "mypy>=0.971",
    "pre-commit>=2.20.0",
]
docs = [
    "sphinx>=5.1.0",
    "sphinx-rtd-theme>=1.0.0",
]
jupyter = [
    "jupyter>=1.0.0",
    "ipykernel>=6.15.0",
    "notebook>=6.4.0",
]
full = [
    "alpha-vantage>=2.3.1",
    "ibapi>=9.81.1",
    "TA-Lib>=0.4.25",
    "pandas-ta>=0.3.14b",
    "plotly>=5.10.0",
    "wandb>=0.13.0",
    "mlflow>=1.28.0",
    "fastapi>=0.82.0",
    "uvicorn>=0.18.0",
    "sqlalchemy>=1.4.0",
]

[project.urls]
Homepage = "https://github.com/Visharath/TradingBot"
Documentation = "https://github.com/Visharath/TradingBot/docs"
Repository = "https://github.com/Visharath/TradingBot"
"Bug Tracker" = "https://github.com/Visharath/TradingBot/issues"

[project.scripts]
trading-bot = "src.unified_trading_bot:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "tests*"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["src"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "ta.*",
    "yfinance.*",
    "ibapi.*",
    "wandb.*",
    "mlflow.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=html --cov-report=term-missing"

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
    "setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\bProtocol\):",
    "@(abc\.)?abstractmethod",
]