[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "unified-trading-bot"
version = "1.0.0"
authors = [
    {name = "Visharath", email = "your.email@example.com"},
]
description = "Unified CNN-LSTM Trading Bot for Algorithmic Trading"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = [
    "trading", "bot", "machine-learning", "cnn", "lstm", 
    "technical-analysis", "algorithmic-trading", "finance"
]
dependencies = [
    "tensorflow>=2.8.0,<3.0.0",
    "numpy>=1.21.0,<2.0.0", 
    "pandas>=1.3.0,<2.0.0",
    "scikit-learn>=1.0.0,<2.0.0",
    "TA-Lib>=0.4.24",
    "talib>=1.4.0",
    "ib-insync>=0.9.70",
    "yfinance>=0.1.70",
    "matplotlib>=3.5.0,<4.0.0",
    "seaborn>=0.11.0,<1.0.0",
    "requests>=2.28.0,<3.0.0",
    "python-dotenv>=0.19.0,<1.0.0",
    "click>=8.0.0,<9.0.0",
    "tqdm>=4.64.0,<5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "isort>=5.10.0", 
    "flake8>=4.0.0",
    "mypy>=0.950",
    "pre-commit>=2.19.0",
]
notebooks = [
    "jupyter>=1.0.0",
    "notebook>=6.4.0",
    "ipykernel>=6.0.0",
    "ipywidgets>=7.6.0",
]
gpu = [
    "tensorflow-gpu>=2.8.0,<3.0.0",
]

[project.urls]
Homepage = "https://github.com/Visharath/TradingBot"
Documentation = "https://github.com/Visharath/TradingBot/docs"
Repository = "https://github.com/Visharath/TradingBot"
"Bug Reports" = "https://github.com/Visharath/TradingBot/issues"

[project.scripts]
trading-bot = "unified_trading_bot.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["unified_trading_bot"]
known_third_party = ["numpy", "pandas", "tensorflow", "sklearn", "matplotlib", "seaborn"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "talib.*",
    "ib_insync.*",
    "yfinance.*",
    "alpha_vantage.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
    "setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]